<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    tools:context="com.sagarrathod.popularmovies.fragments.MovieDetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/LabelTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/release_date"
                    style="@style/LabelTheme.ContentTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2014-3-3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/LabelTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating" />

                <TextView
                    android:id="@+id/user_rating"
                    style="@style/LabelTheme.ContentTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.3/10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_as_favorite"
                    android:layout_gravity="center"
                    />

                <ImageButton android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:src="@drawable/star"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/LabelTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/overview"
            style="@style/LabelTheme.ContentTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <TextView
        style="@style/LabelTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watch_movie_trailer" />

    <ListView
        android:id="@+id/video_grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:dividerHeight="3px"
        android:drawSelectorOnTop="false"
        android:fadingEdge="vertical"
        android:padding="0dip"
        android:scrollbars="none"
        android:smoothScrollbar="true"
        android:soundEffectsEnabled="true" />

    <TextView
        style="@style/LabelTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_reviews" />

    <ListView
        android:id="@+id/user_review_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:layout_weight="4"
        android:cacheColorHint="#00000000"
        android:dividerHeight="1px"
        android:drawSelectorOnTop="false"
        android:fadingEdge="vertical"
        android:padding="0dip"
        android:scrollbars="none"
        android:smoothScrollbar="true"
        android:soundEffectsEnabled="true" />

</LinearLayout>